# gre

./: .cvsignore  .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.in-old  NET.pl  NEWS  NOTES  PLANS  README  TAGS  THANKS  TO-DO  chart.gre  config.status  configure  configure.ac  configure.in-0  configure.in-GRI  example1.gre  gre-mode.el  gre.spec  gri2gre  license.txt  memoryleak.gre  nasdaq2dat  parser.output  parser.y-1999-01-04  parser.y-1999-04-04  parser.y-2000-02-17  parser.y-2000-05-02  plot.gre  scalar.tex  sound_speed.gre  t.gre  test-math-spacing.gre  test-tag.gre  test.cc  (+9 more)
autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
doc/: .cvsignore  .gitignore  Bugs.html  BuiltinCommands.html  BuiltinIndex.html  CommandIndex.html  ConceptIndex.html  Cookbook.html  Grammar.html  HTML_subdivide  Hints.html  History.html  Introduction.html  Invoking.html  Makefile  Makefile.am  Makefile.am~  Makefile.in  Plans.html  RPM_prepare.pl  gre.1  gre.texi  gre.texim  gre.texi~  gre1.html  gre2html  gre2texi  index.html  make_html_builtinindex  make_html_commandindex  make_html_index  test.gre  test.ps  texim2texi  texinfo.tex  texinfo2HTML  texinfo2HTML-keep  tmp.1
doc/CVS/: Baserev  Entries  Repository  Root
doc/CVS/Base/: gre.texim
doc/figures/: .cvsignore  Makefile  Makefile.am  Makefile.am~  Makefile.in  TS-color.gre  TS-color.html  TS-color.txt  TS.eps  TS.gre  TS.html  TS.txt  TU_defn.gre  TU_defn.html  TU_defn.ps  TU_defn.txt  birthday.gre  birthday.html  birthday.ps  birthday.txt  clip_to_curve.gre  clip_to_curve.html  clip_to_curve.ps  clip_to_curve.txt  diamonds.gre  diamonds.html  diamonds.ps  diamonds.txt  example1.gre  example1.html  example1.ps  example1.txt  hue_demo.gre  hue_demo.html  hue_demo.ps  hue_demo.txt  logo.gre  logo.html  logo.ps  logo.txt  (+12 more)
doc/figures/CVS/: Entries  Repository
doc/resources/CVS/: Entries  Repository
doc/tst_suite/: Makefile  Makefile.am  Makefile.am~  Makefile.in  tst-benchmark.gre  tst-builtin.gre  tst-die.gre  tst-do-while.gre  tst-errors.gre  tst-for-time.gre  tst-for.gre  tst-foreach.gre  tst-if.gre  tst-last.gre  tst-match.gre  tst-math.gre  tst-mean.gre  tst-my.gre  tst-nested-cmd.gre  tst-new-cmd.gre  tst-print.gre  tst-query.gre  tst-random.gre  tst-read.gre  tst-string-comp.gre  tst-sub.gre  tst-substitute.gre  tst-sw.gre  tst-variables.gre  tst-variables2.gre  tst-version.gre  tst-while-time.gre  tst-while.gre
doc/tst_suite/CVS/: Entries  Repository
src/: GMatrix.h  GriColor.cpp  GriColor.h  GriPath.cpp  GriPath.h  GriState.cpp  GriState.h  Makefile  Makefile.am  Makefile.in  README  TAGS  convert.cpp  debug.h  defaults.h  delete.cpp  draw.cpp  endup.cpp  errors.h  extern.h  file.cpp  files.h  gr.cpp  gr.h  gr_coll.cpp  gr_coll.h  graxes.cpp  grcntour.cpp  gre.cmd  gre_main.cpp  grstring.cpp  image.cpp  image_ex.h  logfile  macro.h  parser.cpp  parser.h  parser.output  parser.y  postscpt.h  (+18 more)
src/.deps/: GriColor.Po  GriPath.Po  GriState.Po  convert.Po  delete.Po  draw.Po  endup.Po  file.Po  gr.Po  gr_coll.Po  graxes.Po  grcntour.Po  gre_main.Po  grstring.Po  image.Po  kelley-set.Po  parser.Po  popt.Po  print.Po  read.Po  regress.Po  scalar.Po  scales.Po  set.Po  startup.Po  stats.Po  storage.Po  subs.Po  test-vector.Po  utility.Po
src/proj/: D.c  Makefile  Makefile-old  Makefile.am  Makefile.in  PJ_aeqd.c  PJ_aitoff.c  PJ_bipc.c  PJ_eqdc.c  PJ_imw_p.c  PJ_laea.c  PJ_lcc.c  PJ_merc.c  PJ_mod_ster.c  PJ_nzmg.c  PJ_ob_tran.c  PJ_ocea.c  PJ_omerc.c  PJ_ortho.c  PJ_sconics.c  PJ_stere.c  README  TAGS  bch2bps.c  bchgen.c  biveval.c  dmstor.c  gen_cheb.c  geod.c  mk_cheby.c  nad2bin.c  nad2nad.c  nad_init.c  pj_ell_set.c  pj_init.c  pj_open_lib.c  pj_param.c  proj.c
src/proj/.deps/: D.Po  PJ_aea.Po  PJ_aeqd.Po  PJ_airy.Po  PJ_aitoff.Po  PJ_august.Po  PJ_bacon.Po  PJ_bipc.Po  PJ_boggs.Po  PJ_bonne.Po  PJ_cass.Po  PJ_cc.Po  PJ_cea.Po  PJ_chamb.Po  PJ_collg.Po  PJ_crast.Po  PJ_denoy.Po  PJ_eck1.Po  PJ_eck2.Po  PJ_eck3.Po  PJ_eck4.Po  PJ_eck5.Po  PJ_eqc.Po  PJ_eqdc.Po  PJ_fahey.Po  PJ_fouc_s.Po  PJ_gall.Po  PJ_gins8.Po  PJ_gn_sinu.Po  PJ_gnom.Po  PJ_goode.Po  PJ_hammer.Po  PJ_hatano.Po  PJ_imw_p.Po  PJ_labrd.Po  PJ_laea.Po  PJ_lagrng.Po  PJ_larr.Po  PJ_lask.Po  PJ_lcc.Po  (+93 more)
src/proj/CVS/: Entries  Repository
