## Process this file with automake to produce Makefile.in
# gre/src/proj/Makefile.am
srcdir = @srcdir@
VPATH = @srcdir@
noinst_LIBRARIES = libgreproj.a
EXTRA_DIST = README
libgreproj_a_SOURCES = aasincos.c adjlon.c bch2bps.c bchgen.c biveval.c D.c dmstor.c emess.c\
gen_cheb.c geod.c geod_for.c geod_inv.c geod_set.c hypot.c mk_cheby.c\
nad2bin.c nad2nad.c nad_cvt.c nad_init.c nad_intr.c PJ_aea.c PJ_aeqd.c\
PJ_airy.c PJ_aitoff.c PJ_august.c pj_auth.c PJ_bacon.c PJ_bipc.c\
PJ_boggs.c PJ_bonne.c PJ_cass.c PJ_cc.c PJ_cea.c PJ_chamb.c PJ_collg.c\
PJ_crast.c PJ_denoy.c pj_deriv.c PJ_eck1.c PJ_eck2.c PJ_eck3.c\
PJ_eck4.c PJ_eck5.c pj_ellps.c pj_ell_set.c PJ_eqc.c PJ_eqdc.c\
pj_errno.c pj_factors.c PJ_fahey.c PJ_fouc_s.c pj_fwd.c PJ_gall.c\
PJ_gins8.c PJ_gnom.c PJ_gn_sinu.c PJ_goode.c PJ_hammer.c PJ_hatano.c\
PJ_imw_p.c pj_init.c pj_inv.c PJ_labrd.c PJ_laea.c PJ_lagrng.c\
PJ_larr.c PJ_lask.c PJ_lcc.c pj_list.c PJ_loxim.c PJ_lsat.c\
pj_malloc.c PJ_mbtfpp.c PJ_mbtfpq.c PJ_mbt_fps.c PJ_merc.c PJ_mill.c\
pj_mlfn.c PJ_mod_ster.c PJ_moll.c PJ_mpoly.c pj_msfn.c PJ_nell.c\
PJ_nell_h.c PJ_nocol.c PJ_nsper.c PJ_nzmg.c PJ_ob_tran.c PJ_ocea.c\
PJ_oea.c PJ_omerc.c pj_open_lib.c PJ_ortho.c pj_param.c pj_phi2.c\
PJ_poly.c pj_pr_list.c PJ_putp2.c PJ_putp3.c PJ_putp4p.c PJ_putp5.c\
PJ_putp6.c pj_qsfn.c pj_release.c PJ_robin.c PJ_rpoly.c PJ_sconics.c\
PJ_somerc.c PJ_stere.c pj_strerrno.c PJ_sts.c PJ_tcc.c PJ_tcea.c\
PJ_tmerc.c PJ_tpeqd.c pj_tsfn.c pj_units.c PJ_urm5.c PJ_urmfps.c\
PJ_vandg2.c PJ_vandg4.c PJ_vandg.c PJ_wag2.c PJ_wag3.c PJ_wag7.c\
PJ_wink1.c PJ_wink2.c pj_zpoly1.c proj.c p_series.c rtodms.c strtod.c\
vector1.c\
emess.h geodesic.h nad_list.h pj_list.h projects.h
CXX=$(CC)
